--- a/Greeting/Properties/launchSettings.json
+++ b/Greeting/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Greeting": {
       "commandName": "Project",
-      "commandLineArgs": "alfredo pippo"
+      "commandLineArgs": "alfredo pippo ANDREA"
     }
   }
 }
